# FL_security

./: .gitignore  CONFIG_MANUAL.md  README.md  pyproject.toml
configs/: algo_fedavg.yaml  attack_none.yaml  default.yaml  nvflare_log_config.json  task_cifar10.yaml
experiments/: README.md
scripts/: export_metrics.py  run_sim.py  run_sim.sh
src/flbench/: __init__.py
src/flbench/algorithms/: __init__.py
src/flbench/algorithms/fedavg/: __init__.py  client.py  job.py  server.py
src/flbench/algorithms/fedprox/: __init__.py  client.py  job.py  server.py
src/flbench/attacks/: __init__.py  alie.py  base.py  bounded_sign_flip.py  byzantine_registry.py  gaussian.py  pgd_minmax.py  random_direction.py  registry.py  scale.py  sign_flip.py  topk_flip.py  utils.py
src/flbench/attacks/noise/: gaussian.py
src/flbench/cli/: client_args.py  client_runner.py  main.py
src/flbench/configs/: default.yaml
src/flbench/core/: __init__.py  aggregation.py  artifacts.py  client_base.py  context.py  hooks.py  logging.py  registry.py  runner.py  server_base.py  types.py
src/flbench/defenses/: __init__.py  aggregator.py  base.py  krum.py  median.py  norm_clip.py  registry.py  trimmed_mean.py
src/flbench/models/: __init__.py  cnn.py  vgg11.py  vision.py
src/flbench/scripts/: __init__.py  run_sim.py
src/flbench/tasks/: __init__.py
src/flbench/utils/: __init__.py  arg_utils.py  cli_kv.py  federated_metrics.py  model_averaging.py  results_utils.py  torch_utils.py
src/models/: alexnet.py  moderate_cnn.py
src/tasks/: __init__.py
src/tasks/cifar10/: task.py
src/tasks/fashionmnist/: task.py
src/tasks/har/: task.py
src/tasks/tiny_imagenet/: task.py
(+42 files in other folders)
