[project]
name = "nvflare-lab"
version = "0.1.0"
description = "Research-ready NVFLARE experimentation lab: pluggable algorithms and tasks (uv-friendly)."
readme = "README.md"
requires-python = ">=3.11, <3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Pu Yang" }]

dependencies = [
  "nvflare>=2.7.1",
  "torch>=2.9.1",
  "torchvision>=0.25.0",
  "numpy>=2.3.0, <2.4",
  "scipy>=1.17.0",
  "tensorboard>=2.20.0",
  "tqdm>=4.67.2",
  "pyyaml>=6.0.3",
]

[project.scripts]
flbench-run = "flbench.cli.main:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flbench", "src/tasks", "src/models"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
